--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,19 @@ dependencies:
   get: ^4.6.5
   flutter_svg: ^1.0.1
   http: ^0.13.4
-  connectivity_plus: ^2.3.5
-  carousel_slider: ^4.1.1
   smooth_page_indicator: ^1.0.0+2
-  url_launcher: ^6.1.4
+  url_launcher: ^6.1.5
   shared_preferences: ^2.0.15
   top_snackbar_flutter: ^2.1.1
   google_maps_flutter: ^2.1.8
+  connectivity: ^3.0.6
+  intl_phone_field: ^3.1.0
+  carousel_slider: ^4.1.1
+  photo_view: ^0.14.0
+  scrollable_positioned_list: ^0.3.2
+  lazy_load_scrollview: ^1.3.0
+  infinite_scroll_pagination: ^3.2.0
+  flutter_multi_select_items: ^0.4.2
 
 dev_dependencies:
   flutter_test:
@@ -73,8 +79,6 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-    - languages/en.json
-    - languages/ar.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
