--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.luxury_version_1">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <queries>
         <!-- If your app checks for SMS support -->
         <intent>
