--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  flutter_svg: ^1.0.1
+  flutter_svg: any
   http: ^0.13.4
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.5
@@ -51,7 +51,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.2
   lazy_load_scrollview: ^1.3.0
   infinite_scroll_pagination: ^3.2.0
-  flutter_multi_select_items: ^0.4.2
+  flutter_html: ^2.2.1
+  syncfusion_flutter_datepicker: ^20.2.46
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - languages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
