--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   flutter_html: ^2.2.1
   syncfusion_flutter_datepicker: ^20.2.46
+  dropdown_button2: ^1.0.0
 
 dev_dependencies:
   flutter_test:
